[tool.poetry]
name = "paper1-code"
version = "0.8.1"
description = "Code to download and analyse data for a paper"
authors = ["engeir <engeir@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
generate-figs = "paper1_code.scripts.gen_figs:main"
generate-fig1 = "paper1_code.scripts.gen_fig1:main"
generate-fig2 = "paper1_code.scripts.gen_fig2:main"
generate-fig3 = "paper1_code.scripts.gen_fig3:main"
generate-fig4 = "paper1_code.scripts.gen_fig4:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
importlib-metadata = "^6.8.0"
xarray = "^2023.11.0"
cftime = "^1.6.3"
h5netcdf = "^1.3.0"
dask = "^2023.11.0"
nc-time-axis = "^1.4.1"
cosmoplots = { git = "ssh://git@github.com/uit-cosmo/cosmoplots.git", rev = "image-concat" }
plastik = "^0.5.0"
matplotlib-label-lines = "^0.7.0"
returns = "^0.22.0"
requests = "^2.31.0"
rich = "^13.7.0"
types-requests = "^2.31.0.20231231"

[tool.poetry.group.dev.dependencies]
pyupgrade = "^2.31.1"
pytest = "^7.1.1"
pre-commit = "^2.17.0"
pre-commit-hooks = "^4.1.0"
wemake-python-styleguide = "^0.18.0"
ruff = "^0.1.0"
pydocstringformatter = "^0.7.3"
xdoctest = "^1.1.2"
mypy = "^1.7.1"
pydoclint = "^0.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["src", "tests"]
ignore_missing_imports = true
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
select = [ # https://docs.astral.sh/ruff/rules/
  "B",  # flake8-bugbear
  "D",  # pydocstyle
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "PL", # pylint
  "Q",  # flake8-quotes
  "UP", # pyupgrade
]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# select = ["E4", "E7", "E9", "F"]  # These are the default
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = [
  # "COM812", # Since we don't select COM, this is already ignored
  # "COM819", # Since we don't select COM, this is already ignored
  "D206",
  "D300",
  "E111",
  "E114",
  "E117",
  "E266",
  "E501",
  # "ISC001", # Since we don't select ISC, this is already ignored
  # "ISC002", # Since we don't select ISC, this is already ignored
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  # "W191",  # Since we don't select W, this is already ignored
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
# Files that were downloaded
extend-exclude = ["python-ucar.cgd.ccsm4.cesmLME*py"]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11
target-version = "py311"

[tool.ruff.pydocstyle]
convention = "numpy"
ignore-decorators = ["typing.overload"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.flake8-import-conventions]
[tool.ruff.flake8-import-conventions.aliases]
# Declare the default aliases.
"matplotlib.pyplot" = "plt"
numpy = "np"
scipy = "sp"
xarray = "xr"
paper1_code = "core"

[tool.ruff.isort]
case-sensitive = true
known-local-folder = ["src", "paper1_code"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
profile = "black"
combine_as_imports = true

[tool.pydocstringformatter]
write = true
strip-whitespaces = true
split-summary-body = false
numpydoc-section-hyphen-length = false
style = ["pep257", "numpydoc"]
